--- a/ista420-project/bin/ista420-project.dll.config
+++ b/ista420-project/bin/ista420-project.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ista420-project-20170613110500.mdf;Initial Catalog=aspnet-ista420-project-20170613110500;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS01;AttachDbFilename=|DataDirectory|\aspnet-ista420-project-20170613110500.mdf;Initial Catalog=aspnet-ista420-project-20170613110500;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="ista420-projectConnectionString" connectionString="Data Source=DESKTOP-BT83IBP\SQLEXPRESS01;Initial Catalog=ista420-project;Integrated Security=True"
       providerName="System.Data.SqlClient" />
