--- a/App/ista420-project/Web.config
+++ b/App/ista420-project/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ista420-project-20170613110500.mdf;Initial Catalog=aspnet-ista420-project-20170613110500;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="ista420-projectConnectionString" connectionString="Data Source=DESKTOP-BT83IBP\SQLEXPRESS01;Initial Catalog=ista420-project;Integrated Security=True"
+    <add name="ista420-projectConnectionString" connectionString="Server=tcp:ista422.database.windows.net,1433;Initial Catalog=JATKRec1;Persist Security Info=False;User ID=jatkadmin;Password=Pa$$w0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
